# rosgo_tests

./: CMakeLists.txt  README.md  package.xml
msg/: AllFieldTypes.msg
scripts/: client.py  listener.py  server.py  talker.py
src/rosgo_tests/test_client/: main.go
src/rosgo_tests/test_listener/: main.go
src/rosgo_tests/test_listener_with_event/: main.go
src/rosgo_tests/test_message/: main.go  message_test.go
src/rosgo_tests/test_param/: main.go
src/rosgo_tests/test_server/: main.go
src/rosgo_tests/test_talker/: main.go
src/rosgo_tests/test_talker_with_callbacks/: main.go
src/test_client/: main.go
src/test_listener/: main.go
src/test_message/: main.go
src/test_server/: main.go
src/test_talker/: main.go
